# smoke_port

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt  LICENSE  Main.cpp  README.md  compile_commands.json
code/Base/: ArrayList.hpp  CMakeLists.txt  Compat.hpp  Errors.hpp  Intrinsics.hpp  Library.cpp  Library.hpp  List.hpp  Math.cpp  Math.hpp  MathX.cpp  MathX.hpp  Platform.hpp  RedBlackTree.hpp  UnitAllocator.cpp  UnitAllocator.hpp
code/Base/Math/: AffineSpace.hpp  BoundingBox.hpp  Color3.hpp  Constants.hpp  LinearSpace3.hpp  Math.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
code/Base/Math/NEON/: NEON.hpp
code/Base/Math/SSE/: Color3.hpp  Math.hpp  SSE.hpp  Vector3.hpp
code/CMakeModules/: FindCg.cmake  FindFMOD.cmake  FindHAVOK.cmake  FindLibBfd.cmake  FindOGRE.cmake  FindOIS.cmake  FindPackageTargetLibraries.cmake  FindPagedGeometry.cmake  ToolchainLinux32.cmake  ToolchainWindows32.cmake
code/Framework/: CMakeLists.txt  ChangeControlManager.cpp  ChangeControlManager.hpp  EnvironmentManager.cpp  EnvironmentManager.hpp  Framework.cpp  Framework.hpp  FrameworkAPI.hpp  PlatformManager.cpp  PlatformManager.hpp  Scheduler.cpp  Scheduler.hpp  ServiceManager.cpp  ServiceManager.hpp  SystemManager.cpp  SystemManager.hpp  TaskManager.cpp  TaskManager.hpp  TaskManagerTP.cpp  TaskManagerTP.hpp  Universal.cpp  Universal.hpp
code/Interfaces/: Area.hpp  Behavior.hpp  ChangeControl.hpp  Contact.hpp  Geometry.hpp  Graphics.hpp  Input.hpp  Interface.hpp  Move.hpp  Platform.hpp  Property.hpp  Service.hpp  System.hpp  SystemTypes.hpp  Target.hpp  TaskManager.hpp  Tree.hpp
code/Interfaces/Common/: AABB.hpp  POI.hpp
code/Interfaces/Services/: Collision.hpp  CollisionAPI.hpp
code/Systems/: CMakeLists.txt
code/Systems/AI/: CMakeLists.txt  CamBot.cpp  CamBot.hpp  Object.cpp  Object.hpp  ObjectCamBot.cpp  ObjectCamBot.hpp  POI.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemAI.cpp  Task.cpp
code/Systems/AI/Bots/: Animal.cpp  Animal.hpp  Bot.cpp  Bot.hpp  Chicken.cpp  Chicken.hpp  Horse.cpp  Horse.hpp  Swallow.cpp  Swallow.hpp
code/Systems/AI/Goals/: Flocking.cpp  Flocking.hpp  Goal.cpp  Goal.hpp  GotoPosition.cpp  GotoPosition.hpp  Herding.cpp  Herding.hpp  Idle.cpp  Idle.hpp  Panic.cpp  Panic.hpp
code/Systems/Ai/: CMakeLists.txt  Object.cpp  ObjectCamBot.cpp  ObjectCamBot.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemAi.cpp  Task.cpp  Task.hpp
code/Systems/Ai/Bots/: Animal.cpp  Animal.hpp  Bot.cpp  Bot.hpp  Chicken.cpp  Chicken.hpp  Horse.cpp  Horse.hpp  Swallow.cpp  Swallow.hpp
code/Systems/Ai/Goals/: Flocking.cpp  Flocking.hpp  Goal.cpp  GotoPosition.cpp  GotoPosition.hpp  Herding.cpp  Herding.hpp  Idle.cpp  Idle.hpp  Panic.cpp  Panic.hpp
code/Systems/AudioFMOD/: CMakeLists.txt  Object.cpp  Object.hpp  ObjectAI.cpp  ObjectAI.hpp  ObjectCollision.cpp  ObjectCollision.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemAudioFMOD.cpp  Task.cpp  Task.hpp
code/Systems/Common/: AABB.hpp  POI.hpp  System.hpp
code/Systems/Explosion/: CMakeLists.txt  Explosion.cpp  Explosion.hpp  Object.cpp  Object.hpp  ObjectExplosion.cpp  ObjectExplosion.hpp  ObjectMeteorImpact.cpp  ObjectMeteorImpact.hpp  POI.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemExplosion.cpp  Task.cpp  Task.hpp
code/Systems/Geometry/: CMakeLists.txt  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemGeometry.cpp
code/Systems/GraphicsOGRE/: CMakeLists.txt  DynamicBuffer.cpp  DynamicLines.hpp  MovableText.cpp  NormalizedLines.cpp  NormalizedLines.hpp  Object.cpp  Object.hpp  ObjectCPUChart.cpp  ObjectCPUChart.hpp  ObjectCamera.cpp  ObjectCamera.hpp  ObjectChart.cpp  ObjectChart.hpp  ObjectLight.cpp  ObjectLight.hpp  ObjectLightFire.cpp  ObjectLightFire.hpp  ObjectMesh.cpp  ObjectMesh.hpp  ObjectMeshAnimated.cpp  ObjectMeshAnimated.hpp  ObjectPagedGeometryLayer.cpp  ObjectPagedGeometryLayer.hpp  ObjectParticleSystem.cpp  ObjectParticleSystem.hpp  ObjectParticles.cpp  ObjectParticles.hpp  ObjectStatWindow.cpp  ObjectStatWindow.hpp  ObjectWindow.cpp  ObjectWindow.hpp  ObjectWorkloadWindow.cpp  ObjectWorkloadWindow.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemGraphicsOGRE.cpp  Task.cpp  (+1 more)
code/Systems/Input/: CMakeLists.txt  Object.cpp  Object.h  Object.hpp  Scene.cpp  Scene.h  Scene.hpp  System.cpp  System.h  System.hpp  SystemInput.cpp  Task.cpp  Task.h  Task.hpp
code/Systems/InputOIS/: CMakeLists.txt  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemInput.cpp  SystemInputOIS.cpp  Task.cpp  Task.hpp
code/Systems/PhysicsBULLET/: CMakeLists.txt  Object.cpp  Object.hpp  ObjectCharacter.cpp  ObjectCharacter.hpp  ObjectPhysics.cpp  ObjectPhysics.hpp  Scene.cpp  Scene.hpp  ServiceCollision.cpp  ServiceCollision.hpp  System.cpp  System.hpp  SystemPhysicsBULLET.cpp  Task.cpp  Task.hpp
code/Systems/PhysicsHAVOK/: CMakeLists.txt  Object.cpp  Object.hpp  ObjectCharacter.cpp  ObjectCharacter.hpp  ObjectPhysics.cpp  ObjectPhysics.hpp  Scene.cpp  Scene.hpp  ServiceCollision.cpp  ServiceCollision.hpp  System.cpp  System.hpp  SystemPhysicsHAVOK.cpp  Task.cpp  Task.hpp
code/Systems/ProceduralFire/: CMakeLists.txt  ColdParticle.cpp  ColdParticle.h  Fire.h  FireBall.h  FireObject.cpp  FireObject.h  FirePatch.h  FireScene.cpp  FireScene.h  FireSystem.cpp  FireSystem.h  HeatParticle.cpp  HeatParticle.h  Object.cpp  Object.hpp  PSystem.h  Scene.cpp  System.cpp  SystemProceduralFire.cpp  Task.cpp  Task.hpp  Vector3.cpp  Vector3.h  aabb.h
code/Systems/ProceduralTrees/: CMakeLists.txt  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemProceduralTrees.cpp  Task.cpp  Task.hpp  TreeObject.cpp  TreeObject.h  TreeScene.cpp  TreeTask.h
code/Systems/Scripting/: Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  SystemScripting.cpp  Task.cpp  Task.hpp
code/Systems/Water/: CMakeLists.txt  Object.cpp  Object.h  Object.hpp  ObjectWaterStream.cpp  ObjectWaterStream.hpp  Scene.cpp  Scene.h  Scene.hpp  System.cpp  System.hpp  SystemWater.cpp  Task.cpp  Task.hpp
(+93 files in other folders)
